--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   http: ^1.2.0
   flutter_secure_storage: ^9.0.0
   provider: ^6.1.2
+  shared_preferences: ^2.2.2
+  web_socket_channel: ^2.3.0
 
 dev_dependencies:
   flutter_test:
